--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,9 @@
 .util_wrap .util li a{color:  #999;}
 .util_wrap .util li:last-child{padding-bottom: 0;}
 #nav-toggle{cursor: pointer;position: absolute;top: 0;width: 25px;height: 25px;padding-top: 10px;left: 0;}
-#nav-toggle span{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #101010;position: absolute;display: block;content: '';}
-#nav-toggle span::before{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #101010;position: absolute;display: block;content: '';top: 6px;}
-#nav-toggle span::after{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #101010;position: absolute;display: block;content: '';top: -6px;}
+#nav-toggle span{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #999;position: absolute;display: block;content: '';}
+#nav-toggle span::before{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #999;position: absolute;display: block;content: '';top: 6px;}
+#nav-toggle span::after{cursor: pointer;border-radius: 1px;height: 2px;width: 25px;background: #999;position: absolute;display: block;content: '';top: -6px;}
 #nav-toggle.active span {background-color: transparent; z-index: ;}
 #nav-toggle span:before, #nav-toggle span:after{-webkit-transition: all 500ms ease-in-out;}
 #nav-toggle.active span:before{-webkit-transform: rotate(45deg); top: 0;}
@@ -30,7 +30,11 @@
 
 .vw_wrap{position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: pink; z-index: 19;}
 .vw_wrap .depth1{position: absolute; top: 50%; display: flex;width:100%;justify-content: space-between; padding: 0 10.4166666vw}/* padding 200px */
-.vw_wrap .depth1 li{margin-right: 20px;}
+.vw_wrap .depth1 li{margin-right: 20px; display: block; width: 100%;}
+.vw_wrap .depth1 .depth2{padding: 0.5vw 0;}
+.vw_wrap .depth2 li{padding: 0.260416vw 0;}
+.vw_wrap .depth2 li a{font-size: 14px;}
+.vw_wrap .depth2 li:hover a {color:  white;}
 
 
 .gnb_wrap{position: relative; text-align: center;}
@@ -52,16 +56,16 @@
 #item_wrap .item li:last-child{margin-right: 0;}
 #item_wrap .item li img{width: 100%;}
 #item_wrap .item dl {font-family: "Open Sans";  color: #707070;}
-#item_wrap .item dl dt {margin-top: 0.5208333333333; cursor: pointer;}/* height 20px */
+#item_wrap .item dl dt {margin-top: 0.5208333333333vw; cursor: pointer;}/* height 20px */
 #item_wrap .item .color_box{width: 1.04166vw; height: 1.04166vw; background: #2E353D; border: 1px solid #000;}
 #item_wrap .item dl dd a{color: #707070;}
 #item_wrap .item dl dd a h1{font-size: 1rem; color: #707070;}
 #item_wrap .item dl dd a p{margin-top: 0.5208333333333vw;}/* margin-top10px */
 #item_wrap .item dl dd .item_explain{font-size: 14px; line-height: 1.5;}/* margin-top10px */
 #item_wrap .item .item_price{font-size: 1rem;}
-#item_wrap .item .color_box{float: left;}
+#item_wrap .item .color_box{float: left; width: 18px; height: 18px;}
 #item_wrap .item .icon_box{float: right;}
-#item_wrap .item .icon_box img{width: 1.041666vw; height: 1.041666vw;}/* width 20px height 20px */
+#item_wrap .item .icon_box img{width: 20px; height: 20px;}/* width 20px height 20px */
 /* 각 item 별 컬러 설정*/
 
 #item_wrap .item2 .color_box{background: white;}
@@ -81,6 +85,10 @@
 
 #sub_banner{width: 62.5vw; margin: 0 auto; margin-bottom: 7.8125vw;}/* margin-bottom 150px */
 #sub_banner img{width: 100%;}
+#sub_banner .slick-dots{position: absolute; top: 50%;left: 5%;}
+#sub_banner .slick-dots li{width: 10px; height: 10px; border: 1px solid #999; border-radius: 50%;margin-top: 0.52vw;}
+#sub_banner .slick-dots button{font-size: 0;border: 0;background: transparent; width: 0; height: 0;}
+#sub_banner .slick-dots .slick-active{width: 10px; height: 10px; border-radius: 50%; background: orange;}
 
 
 /* 서브 배너 영역 끝 */
@@ -101,9 +109,9 @@
 #accitem_wrap .acc_item  dl dd a p{margin-top: 0.5208333333333vw;}/* margin-top10px */
 #accitem_wrap .acc_item  dl dd .item_explain{font-size: 1rem; line-height: 1.5;}/* margin-top10px */
 #accitem_wrap .acc_item  .item_price{font-size: 1.25rem;}
-#accitem_wrap .acc_item  .color_box{float: left;}
+#accitem_wrap .acc_item  .color_box{float: left; width:20px; height: 20px;}
 #accitem_wrap .acc_item  .icon_box{float: right;}
-#accitem_wrap .acc_item  .icon_box img{width: 1.041666vw; height: 1.041666vw;}/* width 20px height 20px */
+#accitem_wrap .acc_item  .icon_box img{width: 20px; height: 20px;}/* width 20px height 20px */
 
 
 /* 악세서리 영역 컬러 변경 */
@@ -117,7 +125,7 @@
 
 #last_banner{width: 100%;height: 65.625vw;position: relative; margin-bottom: 7.8125vw;}/* margin-bottom 150px */
 #last_banner .lb_1{z-index: 1; margin-left: 5.2083333VW; width: 62.5vw; position: absolute; top: 0; left: 0;transition: z-index 0.3s;}/* margin-left 100px  widrh:1200px*/
-#last_banner .lb_2{z-index: 2;margin-right: 5.2083333vw; width: 62.5vw; position: absolute; top: 21.3541666vw; right: 0;}/* width:1200px margin-right 100px top 450px */
+#last_banner .lb_2{z-index: 2;margin-right: 5.2083333vw; width: 62.5vw; position: absolute; top: 35%; right: -0.260416%;}/* width:1200px margin-right 100px top 450px */
 #last_banner .lb_1 img{width: 100%;}
 #last_banner .lb_2 img{width: 100%;}
 #last_banner .lb_1:hover{z-index: 11;}
@@ -140,3 +148,17 @@
 #footer .inner{width:100%;margin: 0 auto; text-align: center;}
 #footer .inner p{margin: 0 auto; font-size: 14px; color: #999; padding:0.2604166vw 0;}/* padding 5px 0 */
 #footer .inner p:last-child{margin-bottom: 2.60416vw;}/* margin-bottom 50px */
+
+
+
+
+/* mobile 영역 */
+
+
+
+#mobile_wrap{width: 100%;}
+.mobile_util{position: fixed; bottom: 0; left: 0; z-index: 99;}
+.mobile_util .m_util{background: white; width: 100vw; display: flex; justify-content: space-between; padding: 0 30px;}
+.mobile_util .m_util li{padding: 20px 0; text-align: center;}
+#mobile_banner{width: 100%;}
+#mobile_banner img{width: 100%;}
